# KOLHAPUR-IT-IS

./: .gitattributes  .gitignore  API_ENDPOINTS.md  API_TESTING_GUIDE.md  API_TEST_GUIDE.md  ARCHITECT-X_ENVIRONMENT_SETUP_COMPLETE.md  ARCHITECT_X_EXECUTION_GUIDE.md  ARCHITECT_X_INDEX.md  ASSESSMENT_PLATFORM_SETUP_GUIDE.md  AUTH_API_REFERENCE.md  ArchitectX-FullSetup.ps1  ArchitectX-Setup-Simple.ps1  ArchitectX-Setup.bat  BCRYPT_72BYTE_FIX_DOCUMENTATION.md  COMPLETE_DELIVERY_REPORT.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_SETUP_GUIDE.md  COMPLETION_CHECKLIST.md  CRITICAL_FIXES_EXPLAINED.md  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE_COMPLETE.md  DOCUMENTATION_INDEX.md  DOWNLOAD_ASSESSMENT_PLATFORM_FIXED.ps1  DO_THIS_NOW.md  ENHANCED_BACKEND_LOGGING.md  FAST_DOWNLOAD.bat  FINAL_DOWNLOADS_INSTALLED_LIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_SUMMARY_COMPLETE.md  MASTER_DELIVERY_INDEX.md  MASTER_INDEX_ALL_FILES.md  PHASES_2_5_READY.md  PHASE_1_COMPLETION_CHECKLIST.md  PHASE_1_EXECUTIVE_SUMMARY.md  PHASE_1_GETTING_STARTED.md  PHASE_1_NEXT_STEPS.md  PHASE_1_READY_FOR_DEPLOYMENT.md  PHASE_2_5_COMPLETION_STATUS.md  QUICK_REFERENCE.md  (+23 more)
backend/: .env  .env.example  CMakeCache.txt  CMakeLists.txt  Makefile  alembic.ini  celery_app.py  cmake_install.cmake  config.py  database.py  database_new.py  freelance_market.db-shm  freelance_market.db-wal  main.cpp  main.py  main_new.py  redis_client.py  requirements.txt  test_password_hashing.py  test_sha256_passwords.py  vcpkg.json
backend/alembic/: env.py
backend/auth/: dependencies.py  jwt_handler.py
(+258 files in other folders)
